integracao com twith e ajustes de cor e correcao de nova enquete e nova mensage,

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -52,7 +52,11 @@
 }
 
 .content-md{
-    background-color: rgba(212, 212, 212, 1)
+    background-color: white
+}
+
+.footer-background-md {
+    background-color: white !important    
 }
 
 //.toolbar-background {
